added header and navbar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camila Zagal</title>
 </head>
-<body>
+<body> 
+    <!-- Header -->
+    <header>
+        <div>
+            <h1>Camila Zagal</h1>
+        </div>
+    </header>
+
+    <!-- Navbar -->
+    <nav>
+        <div>
+            <p>About Me</p>
+        </div>
+
+        <div>
+            <p>My Work</p>
+        </div>
+
+        <div>
+            <p>Contact Me</p>
+        </div>
+    </nav>
     
+    <!-- About me -->
+    <section>
+
+
+    </section>
+
+    <!-- Footer -->
+    <footer>
+
+    </footer>
+
 </body>
 </html>
