aligned header and navbar

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     </header>
 
     <!-- Navbar -->
-    <nav>
-        <div>
+    <nav class="navbar">
+        <div class="aboutme-container">
             <p>About Me</p>
         </div>
 
-        <div>
+        <div class="mywork-container">
             <p>My Work</p>
         </div>
 
-        <div>
+        <div class="contactme-container">
             <p>Contact Me</p>
         </div>
     </nav>
