basic styling of aboutme section

--- a/index.html
+++ b/index.html
@@ -31,10 +31,18 @@
     </nav>
     
     <!-- About me -->
-    <section>
+    <section class="aboutme-container">
+        <div class="aboutme-h1">
+            <h2>About Me</h2>
+        </div>
 
+        <div class="aboutme-p">
+            <p>Sit elit duis elit sint quis nulla ut aliqua nulla fugiat sit fugiat sit pariatur. Sint ea veniam sint deserunt. Eu culpa in duis pariatur ipsum est adipisicing ullamco est. Nulla ea occaecat deserunt ex. Aliquip duis amet adipisicing mollit ad dolore aliquip est tempor aliquip et aute laborum. Cupidatat proident ad officia ut duis consectetur labore mollit dolor excepteur excepteur Lorem. Consectetur esse nisi quis anim et culpa tempor labore velit tempor sint duis.</p>
+            <p>Proident eiusmod veniam magna quis fugiat magna officia officia do officia veniam occaecat ea ex. Pariatur id non sint officia ex sint elit eiusmod. Culpa quis exercitation velit aliquip labore et aliquip dolore adipisicing pariatur anim tempor laborum. Ea velit ut ex nostrud consequat sit cillum ut tempor. Lorem ipsum amet non cillum voluptate do laborum. Qui nisi minim eu cillum veniam laboris enim consectetur est ea cillum ipsum. Dolor ipsum aliqua nulla nisi duis adipisicing labore id cillum.</p>
+        </div>
 
     </section>
+
 
     <!-- Footer -->
     <footer>
